Bug 13777 - Regression: argc=Cannot access memory at address
Summary: Regression: argc=Cannot access memory at address
Status: RESOLVED FIXED
Alias: None
Product: gdb
Classification: Unclassified
Component: symtab (show other bugs)
Version: HEAD
: P2 normal
Target Milestone: 7.5
Assignee: Jan Kratochvil
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-02-27 22:11 UTC by Jan Kratochvil
Modified: 2012-03-16 18:28 UTC (History)
0 users

See Also:
Host:
Target: i386-unknown-linux-gnu
Build:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jan Kratochvil 2012-02-27 22:11:07 UTC
$ gdb ls
(gdb) start
Temporary breakpoint 1, main (argc=Cannot access memory at address 0x81b7c7cd

CentOS-5 i386
coreutils-5.97-34.el5.i386
coreutils-debuginfo-5.97-34.el5.i386

332339a37039332227ae5ddfdbcaba3e34610ae7 is the first bad commit
commit 332339a37039332227ae5ddfdbcaba3e34610ae7
Author: Jan Kratochvil <jan.kratochvil@redhat.com>
Date:   Fri May 6 15:06:41 2011 +0000
    gdb/
    	PR 12573
Comment 1 Jan Kratochvil 2012-02-28 21:05:50 UTC
[patch] Fix regression by me for gcc-4.0...gcc-4.4 i386 -O2 -g parameters (PR 13777)
http://sourceware.org/ml/gdb-patches/2012-02/msg00673.html
Comment 2 Sourceware Commits 2012-03-16 18:26:11 UTC
CVSROOT:	/cvs/src
Module name:	src
Changes by:	jkratoch@sourceware.org	2012-03-16 18:26:03

Modified files:
	gdb            : ChangeLog dwarf2read.c 
	gdb/testsuite  : ChangeLog 
	gdb/testsuite/gdb.dwarf2: dw2-skip-prologue.S 

Log message:
	gdb/
	PR symtab/13777
	* dwarf2read.c (process_full_comp_unit): Set LOCATIONS_VALID only for
	GCC >=4.5.
	
	gdb/testsuite/
	PR symtab/13777
	* gdb.dwarf2/dw2-skip-prologue.S (DW_AT_producer): Set it to 4.5.0.

Patches:
http://sourceware.org/cgi-bin/cvsweb.cgi/src/gdb/ChangeLog.diff?cvsroot=src&r1=1.14023&r2=1.14024
http://sourceware.org/cgi-bin/cvsweb.cgi/src/gdb/dwarf2read.c.diff?cvsroot=src&r1=1.625&r2=1.626
http://sourceware.org/cgi-bin/cvsweb.cgi/src/gdb/testsuite/ChangeLog.diff?cvsroot=src&r1=1.3142&r2=1.3143
http://sourceware.org/cgi-bin/cvsweb.cgi/src/gdb/testsuite/gdb.dwarf2/dw2-skip-prologue.S.diff?cvsroot=src&r1=1.3&r2=1.4
Comment 3 Jan Kratochvil 2012-03-16 18:27:12 UTC
Checked in.