gdb/ 	PR symtab/13777 	* dwarf2read.c (process_full_comp_unit): Set LOCATIONS_VALID only for 	GCC >=4.5.

gdb/testsuite/
	PR symtab/13777
	* gdb.dwarf2/dw2-skip-prologue.S (DW_AT_producer): Set it to 4.5.0.